Vue comptes: selection des comptes directement dans la liste