@@ -2,7 +2,7 @@ package org.designup.picsou.gui.accounts;
 
 import org.designup.picsou.gui.accounts.position.AccountPositionLabels;
 import org.designup.picsou.gui.accounts.utils.GotoAccountWebsiteAction;
-import org.designup.picsou.gui.accounts.utils.GotoAccountOperationsAction;
+import org.designup.picsou.gui.card.NavigationService;
 import org.designup.picsou.gui.description.AccountComparator;
 import org.designup.picsou.gui.description.Formatting;
 import org.designup.picsou.gui.model.SavingsBudgetStat;
@@ -15,9 +15,13 @@ import org.globsframework.gui.GlobSelection;
 import org.globsframework.gui.GlobSelectionListener;
 import org.globsframework.gui.GlobsPanelBuilder;
 import org.globsframework.gui.SelectionService;
+import org.globsframework.gui.splits.SplitsNode;
 import org.globsframework.gui.splits.repeat.RepeatCellBuilder;
 import org.globsframework.gui.splits.repeat.RepeatComponentFactory;
 import org.globsframework.gui.utils.GlobRepeat;
+import org.globsframework.gui.utils.GlobSelectablePanel;
+import org.globsframework.gui.utils.GlobSelectionToggle;
+import org.globsframework.gui.utils.GlobUnselectPanel;
 import org.globsframework.gui.views.AbstractGlobTextView;
 import org.globsframework.gui.views.GlobButtonView;
 import org.globsframework.gui.views.GlobLabelView;
@@ -50,14 +54,14 @@ public abstract class AccountViewPanel {
     this.summaryId = summaryId;
 
     directory.get(SelectionService.class).addListener(new GlobSelectionListener() {
-      public void selectionUpdated(GlobSelection selection) {
-        GlobList months = selection.getAll(Month.TYPE);
-        filterMatcherWithDates =
-          GlobMatchers.and(accountTypeMatcher,
-                           new Matchers.AccountDateMatcher(months));
-        accountRepeat.setFilter(filterMatcherWithDates);
-      }
-    }, Month.TYPE);
+                                                        public void selectionUpdated(GlobSelection selection) {
+                                                          GlobList months = selection.getAll(Month.TYPE);
+                                                          filterMatcherWithDates =
+                                                            GlobMatchers.and(accountTypeMatcher,
+                                                                             new Matchers.AccountDateMatcher(months));
+                                                          accountRepeat.setFilter(filterMatcherWithDates);
+                                                        }
+                                                      }, Month.TYPE);
 
     repository.addChangeListener(new ChangeSetListener() {
       public void globsChanged(ChangeSet changeSet, GlobRepository repository) {
@@ -88,6 +92,8 @@ public abstract class AccountViewPanel {
     JLabel labelTypeName = new JLabel();
     builder.add("labelTypeName", labelTypeName);
 
+    builder.add("unselect", GlobUnselectPanel.init(Account.TYPE, directory).getComponent());
+
     accountRepeat = builder.addRepeat("accountRepeat", Account.TYPE, accountTypeMatcher,
                                       new AccountComparator(),
                                       new AccountRepeatFactory());
@@ -113,12 +119,26 @@ public abstract class AccountViewPanel {
 
   private class AccountRepeatFactory implements RepeatComponentFactory<Glob> {
     public void registerComponents(RepeatCellBuilder cellBuilder, final Glob account) {
-      add("accountName",
-          createAccountNameButton(account, repository, directory), account, cellBuilder);
+
+      SplitsNode<JPanel> accountPanel = cellBuilder.add("accountPanel", new JPanel());
+      GlobSelectablePanel toggle =
+        new GlobSelectablePanel(accountPanel,
+                                "selectedPanel", "unselectedPanel",
+                                "selectedRolloverPanel", "unselectedRolloverPanel",
+                                repository, directory, account.getKey());
+      cellBuilder.addDisposeListener(toggle);
+
+      add("editAccount",
+          createEditAccountButton(repository, directory), account, cellBuilder);
+
+      add("showAccount",
+          createShowAccountButton(repository, directory), account, cellBuilder);
+
+      GlobSelectionToggle selectionToggle = new GlobSelectionToggle(account.getKey(), repository, directory);
+      cellBuilder.add("selectAccount", selectionToggle.getComponent());
+      cellBuilder.addDisposeListener(selectionToggle);
 
       cellBuilder.add("gotoWebsite", new GotoAccountWebsiteAction(account, repository, directory));
-
-      cellBuilder.add("gotoOperations", new GotoAccountOperationsAction(account, repository, directory));
 
       add("accountUpdateDate",
           GlobLabelView.init(Account.POSITION_DATE, repository, directory),
@@ -144,7 +164,8 @@ public abstract class AccountViewPanel {
                                   new AccountPositionEditionDialog(account, false, repository, directory, directory.get(JFrame.class));
                                 accountPositionEditor.show();
                               }
-                            }).forceSelection(account.getKey());
+                            }
+        ).forceSelection(account.getKey());
       cellBuilder.add("accountPosition", balance.getComponent());
 
       AccountPositionLabels positionLabels = createPositionLabels(account.getKey());
@@ -163,22 +184,29 @@ public abstract class AccountViewPanel {
 
   protected abstract AccountPositionLabels createPositionLabels(Key accountKey);
 
-  private static class EditAccountFunctor implements GlobListFunctor {
-
-    private Directory directory;
-
-    private EditAccountFunctor(Directory directory) {
-      this.directory = directory;
-    }
-
-    public void run(GlobList list, GlobRepository repository) {
-      AccountEditionDialog dialog = new AccountEditionDialog(repository, directory);
-      dialog.show(list.get(0));
-    }
+  public static GlobButtonView createShowAccountButton(final GlobRepository repository,
+                                                       final Directory directory) {
+    return GlobButtonView.init(Account.NAME, repository, directory,
+                               new GlobListFunctor() {
+                                 public void run(GlobList accounts, GlobRepository repository) {
+                                   if (accounts.isEmpty()) {
+                                     return;
+                                   }
+                                   Key accountKey = accounts.getFirst().getKey();
+                                   NavigationService navigationService = directory.get(NavigationService.class);
+                                   navigationService.gotoDataForAccount(accountKey);
+                                 }
+                               });
   }
 
-  public static GlobButtonView createAccountNameButton(Glob account, final GlobRepository repository, final Directory directory) {
+  public static GlobButtonView createEditAccountButton(final GlobRepository repository,
+                                                       final Directory directory) {
     return GlobButtonView.init(Account.NAME, repository, directory,
-                               new EditAccountFunctor(directory)).forceSelection(account.getKey());
+                               new GlobListFunctor() {
+                                 public void run(GlobList accounts, GlobRepository repository) {
+                                   AccountEditionDialog dialog = new AccountEditionDialog(repository, directory);
+                                   dialog.show(accounts.get(0));
+                                 }
+                               });
   }
 }
